# ComfyUI_u5_EasyScripter

./: LICENSE  README.md  __init__.py  builtin_functions.py  locales.py  pyproject.toml  script_engine.py  script_execution_queue.py  script_parser.py  scripter_node.py  type_detector.py  u5_loaders.py
.claude/: settings.local.json
data/: model_resolutions.csv
docs/: 01_syntax_reference.md  CHANGELOG.md
docs/02_builtin_functions/: 00_index.md  01_math_functions.md  02_string_functions.md  03_datetime_functions.md  04_csv_functions.md  05_regex_functions.md  06_array_functions.md  07_type_functions.md  08_model_functions.md  09_utility_functions.md
docs/de/: 00_index.md  01_math_functions.md  01_syntax_reference.md  02_string_functions.md  03_datetime_functions.md  04_csv_functions.md  05_regex_functions.md  06_array_functions.md  07_type_functions.md  08_model_functions.md  09_utility_functions.md  CHANGELOG.md  README.md
docs/en/: 00_index.md  01_math_functions.md  01_syntax_reference.md  02_string_functions.md  03_datetime_functions.md  04_csv_functions.md  05_regex_functions.md  06_array_functions.md  07_type_functions.md  08_model_functions.md  09_utility_functions.md  CHANGELOG.md  README.md
docs/es/: 00_index.md  01_math_functions.md  (+11 more)
functions/: __init__.py  base_functions.py  csv_functions.py  date_functions.py  http_functions.py  loop_functions.py  math_functions.py  misc_functions.py  model_functions.py  python_functions.py  regex_functions.py  string_functions.py
web/: comfyui_u5_easyscripter.css  comfyui_u5_easyscripter.js  comfyui_u5_loaders.js
(+26 files in other folders)
