[project]
name = "comfyui-u5-easyscripter"
version = "3.2.12"
description = "EASY VBA-style script for ComfyUI. Anything you want be in 1 node. Conditional branching, iteration, prompt generation, parameter adjustment, memory release, file input/output, Using HTTP RestAPI ... with 100+ built-in functions!"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []

# Optional: Specify supported operating systems
classifiers = [
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/u5dev/ComfyUI_u5_EasyScripter"

[tool.comfy]
PublisherId = "u5dev"
DisplayName = "u5_EasyScripter"
Icon = "https://raw.githubusercontent.com/u5dev/ComfyUI_u5_EasyScripter/refs/heads/main/docs/img/icon.png"
